netpol-operator-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubesynapse-allow-operator-gateway-egress
  namespace: kubesynapse
  labels:
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/instance: kubesynapse
    app.kubernetes.io/name: kubesynapse
spec:
  podSelector:
    matchLabels:
      app: operator
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - port: 8080
          protocol: TCP
